--- a/src/index.scss
+++ b/src/index.scss
@@ -1,24 +1,36 @@
-@import-normalize;
+@import-normalize ;
 @import 'helper';
 * {margin: 0;padding: 0;}
+
 * {box-sizing: border-box;}
+
 *::before {box-sizing: border-box;}
+
 *::after {box-sizing: border-box;}
-ul,ol {
-    list-style: none;
+
+ul, ol {
+  list-style: none;
 }
+
 a {text-decoration: none;color: inherit;}
 
 body {
-    font-family: $font-hei;
-    font-size: 16px;
-    line-height: 1.2;
-    background: #f5f5f5;
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
+  background: #f5f5f5;
 }
+
 button {
-    font-family: inherit;
+  font-family: inherit;
 }
+
+:focus {
+  outline: none;
+}
+
 .icon {
-    width: 1em;
-    height: 1em;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
 }
